Smaller slug image.

--- a/get-xena/index.html
+++ b/get-xena/index.html
@@ -160,9 +160,7 @@ td {
 
 	function buildImage() {
 		var i = d.createElement('img');
-		i.src = "battle_slug.png";
-		i.width = 300;
-		i.height = 300;
+		i.src = "battle_slug_300.png";
 		return i;
 	}
 
