--- a/get-xena/index.html
+++ b/get-xena/index.html
@@ -91,6 +91,16 @@ td {
 		return n && getIn(n, path.slice(1));
 	}
 
+	function parseInt10(s) {
+		return parseInt(s, 10);
+	}
+
+	function osxArch() {
+		var version = getIn(platform, ['os', 'version']),
+			parts = version && version.match(/(\d*)\.(\d*)\.(\d*)/).slice(1).map(parseInt10); // [maj, min, patch]
+		return (parts && parts[0] === 10 && parts[1] <= 6) ? 32 : 64;
+	}
+
 	function getOs() {
 		var family = getIn(platform, ['os', 'family']);
 		if (family) {
@@ -108,7 +118,7 @@ td {
 
 	function suggest() {
 		var os = getOs(),
-			arch = platform.os.architecture,
+			arch = os === 'OS X' ? osxArch() : getIn(platform, ['os', 'architecture']),
 			btn, div;
 		if (os && arch) {
 			div = d.createElement('div');
